<resources>
    <string name="app_name">Stryker </string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer </string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer </string>
    <string name="nav_header_title">Stryker </string>
    <string name="nav_header_subtitle">Stryker </string>
    <string name="nav_header_desc" translatable="false">Navigation header </string>
    <string name="action_settings" translatable="false">Settings </string>
    <string name="drawer_open" translatable="false">Open navigation drawer </string>
    <string name="drawer_close" translatable="false">Close navigation drawer </string>
    <string name="version">Version: 2.0 </string>
    <string name="install">Install </string>
    <string name="instal1">Preparing… </string>
    <string name="check1">Permission request </string>
    <string name="check2">Checking Permissions </string>
    <string name="check3">Architecture check </string>
    <string name="check4">Checking Drivers </string>
    <string name="install2">Core loading </string>
    <string name="install3">Installing the Core </string>
    <string name="success">Successful installation </string>
    <string name="wait">Please wait </string>
    <string name="fail">Download failed, please check your internet connection </string>
    <string name="install_unpack">Unpacking the Core </string>
    <string name="local_scan">Scanning the local network may take some time, but the result will be 💣! </string>
    <string name="invalid_creds">Failed to login </string>
    <string name="no_results">No results found </string>
    <string name="ew_welcome">Welcome to the Add Exploit Wizard, please follow all the instructions and follow all the steps to successfully add. Click the "Continue" button to proceed to the next step. </string>
    <string name="ew_path">(/sdcard/Stryker/exploits/) </string>
    <string name="select">Path to exploit: click to select </string>
    <string name="no_pattern">Attention, the application could not find such a line in the file. This may be due to a feature of the script or obfuscation. Are you sure you entered everything correctly? </string>
    <string name="warn">Warning </string>
    <string name="yes">Yes </string>
    <string name="no">Not </string>
    <string name="select_file">Please select a file from the list! </string>
    <string name="exploits">In the exploits section, you can add your own exploits and scripts, and then use them for their intended purpose. Automatic parameter detection supported </string>
    <string name="scanners">Here you can create or edit ready-made vulnerability scanners. You can combine protocol exploits to launch with one click. </string>
    <string name="exploits_title">Exploits </string>
    <string name="scanners_title">Scanners </string>
    <string name="tutorials">textbooks </string>
    <string name="add">Add </string>
    <string name="run">launch </string>
    <string name="exs">Exploits… </string>
    <string name="bit">Unfortunately, your device is 32-bit and does not support the required library! Please try other features of the app! </string>
    <string name="usb">USB device connected </string>
    <string name="noroot">Sorry, this app needs root permissions to work! </string>
    <string name="customvalue">Enter custom value </string>
    <string name="wifi">WiFi networks </string>
    <string name="dashboard">Home </string>
    <string name="wifi_networks">WiFi networks </string>
    <string name="local_network">Local network </string>
    <string name="handshakes">Handshakes </string>
    <string name="exploit_hub">Exploits </string>
    <string name="core_manager">Manager </string>
    <string name="modules_repo">Repository </string>
    <string name="app_setting">Settings </string>
    <string name="about_app">About </string>
    <string name="check_smb">Check SMB for vulnerabilities </string>
    <string name="check_rdp">Check RDP for vulnerabilities </string>
    <string name="check_camera">Check RTSP for vulnerabilities </string>
    <string name="check_admin">Check the panel for vulnerabilities </string>
    <string name="run_custom">Run custom exploit </string>
    <string name="list_of_ports">List of available ports </string>
    <string name="router_scan" translatable="false">Router Scan </string>
    <string name="integration">3wifi integration </string>
    <string name="nmap">Nmap Scanner </string>
    <string name="installed">Installed </string>
    <string name="online_repo">Online repository </string>
    <string name="scanning_wifi">Scanning Wi-Fi networks </string>
    <string name="no_inet">Sorry, I can\'t connect to the repository… </string>
    <string name="delcache">Removing cache… </string>
    <string name="download_apk">Loading app… </string>
    <string name="download_chroot">Loading chroot… </string>
    <string name="unmount">Unmounting the Core… </string>
    <string name="delchroot">Removing the old chroot… </string>
    <string name="installchroot">Installing a new chroot </string>
    <string name="installapk">Please install the requested apk! </string>
    <string name="tryagain">Try again </string>
    <string name="bruteforce_pin">Brute force PIN </string>
    <string name="connect_with_custom_pin">Connect with a PIN </string>
    <string name="bruteforce_password">Password Brute Force </string>
    <string name="try_capture_handshake">Handshake capture </string>
    <string name="deauth_clients">Client Deauthing </string>
    <string name="pixie_dust_attack">Pixie Dust attack </string>
    <string name="reload">Restart application </string>
    <string name="debug_desv">Hi, I\'m sorry you\'re having a problem! Please go through the entire installation path! After send off the file /Stryker/log.txt to the developer! </string>
    <string name="debug_mode_title">Debug mode </string>
    <string name="debug_mode_on">Debug mode enabled! </string>
    <string name="noroot_perm">No root  </string>
    <string name="nonroot">Sorry this app can\'t work without root due to android limitation. How to get root? xda-developers.com/root! </string>
    <string name="no_storage">No storage permission </string>
    <string name="no_storage_desc">Sorry, this app can\'t work without storage permission! Click here to go to settings! </string>
    <string name="failed_try">Didn\'t work, try again! </string>
    <string name="reboot_update">A reboot is required for a safe update! </string>
    <string name="reboot">Reload </string>
    <string name="installing">Installation… </string>
    <string name="installedd">Installed </string>
    <string name="inst_error">Installation error </string>
    <string name="checking_inet">Checking internet connection… </string>
    <string name="no_inet_chroot">Core does not have access to the internet. This may cause errors in operation! </string>
    <string name="installingg">Installation… </string>
    <string name="get_exploitfile">Select script from files </string>
    <string name="path">Path: </string>
    <string name="please_file">Please choose a file! </string>
    <string name="copied">Copied to clipboard! </string>
    <string name="pass_founded">Password found: </string>
    <string name="select_word">Choose a dictionary </string>
    <string name="pass_not_found">Password not found </string>
    <string name="error_upload">File upload error! </string>
    <string name="file_was_uploaded">The file has already been uploaded before! </string>
    <string name="upload_success">The file has been successfully uploaded, please check your mail! </string>
    <string name="please_connect">Please connect to the network first! </string>
    <string name="scanning">Scanning in progress… </string>
    <string name="oops">Oops, looks like something went wrong! </string>
    <string name="deleting">Deleting… </string>
    <string name="finished">Finished </string>
    <string name="saved_to">The results are saved in routerscan.csv! </string>
    <string name="stop">Stop </string>
    <string name="start">Start </string>
    <string name="scan_finised">Scan completed! </string>
    <string name="scan_finished_desc">Scan completed! You can save the result with the icon at the top! </string>
    <string name="save">Save </string>
    <string name="saved_to_exp">Saved to exploits! </string>
    <string name="pin">Pin: </string>
    <string name="key">Key: </string>
    <string name="trying">Trying: </string>
    <string name="succes">Success! </string>
    <string name="speed">Speed: </string>
    <string name="spin">sec/pin </string>
    <string name="now">Now: </string>
    <string name="send_pin">Sending a Pin </string>
    <string name="target_locked">Target locked </string>
    <string name="m1">M1 Receive </string>
    <string name="m2">Sending M2… </string>
    <string name="enon">Received E-Nonce on target… </string>
    <string name="pkr">PKR received </string>
    <string name="pke">PKE received </string>
    <string name="authkey">AuthKey received </string>
    <string name="m4">Getting M4 </string>
    <string name="exploit_wizard_step_1_of_2">Exploit Wizard (Step 1 of 2) </string>
    <string name="arguments">Arguments </string>
    <string name="allowed_shortcuts_n_ip_ip_address_n_port_port_n_gw_gateway_n_mask_subnet_mask_n_mac_mac_address_n_ncustom_shortcuts_n_customtext_app_will_ask_you_to_enter_variable_manually">Allowed shortcuts:\n{IP} - IP address\n{PORT} - port\n{GW} - gateway\n{MASK} - subnet mask\n{MAC} - MAC address\n\nCustom shortcuts:\n{CUSTOMTEXT} - the application will ask you to enter the variable manually </string>
    <string name="example_n_myexploit_t_ip_p_port_threads_n_n_n_n_works_as_customtext_and_you_will_be_able_to_enter_it_before_scan_starts">Example:\n./myexploit -t {IP} -p {PORT} --threads {N}\n\n{N} works like {CUSTOMTEXT} and you can enter it before the scan starts! </string>
    <string name="exploit_wizard_step_2_of_2">Exploit Wizard (Step 2 of 2) </string>
    <string name="title">Title </string>
    <string name="successful_pattern">successful pattern </string>
    <string name="how_it_works_nenter_message_or_part_of_it_which_script_displays_on_success_result_if_no_msg_found_result_marked_as_failed">How does it work?\nEnter the message (or part of it) that the script will display on success. If the message is not found, the result is marked as failed! </string>
    <string name="example_n_exploit_successful_marked_as_good_result_nif_no_such_msg_failed">Example:\n[vuln] Target vulnreable - flagged as a good result.\nIf there is no such message, an error </string>
    <string name="detect_os">Detect OS </string>
    <string name="detect_services">Service discovery </string>
    <string name="fast_scan_less_ports">Fast scan (fewer ports) </string>
    <string name="mark_host_s_as_online">Mark host(s) as online </string>
    <string name="perms">Permissions </string>
    <string name="perms_desc">The application needs permissions:\n● Access to files\n● Root access\nThe application cannot work without them! </string>
    <string name="check">Check </string>
    <string name="term_title">Integration with termux </string>
    <string name="alpine_linux_termux_exit">Now you can work with Termux in Alpine Linux! To return to the Termux environment, it will be enough to write exit! </string>
    <string name="yeah_ok">Yes, Do it </string>
    <string name="thx_no">Perhaps, I will refuse </string>
    <string name="finished_inst">Installation completed! </string>
    <string name="inst_final_desc">"The application is already set up and ready to run! Please note: some features will not work due to the nature of the device! For additional functionality, check out the online repository! Clicking button below you agree with Terms of use zalex.dev/stryker/policy"</string>
    <string name="laucnh">Launch </string>
    <string name="target_ip_mask">Target (ip,mask) </string>
</resources>